Point 4. Added to end of Pg 48: In deriving \eq{eq:approxlyth-dbiintro} we have assumed that /\cs \PX$ varies slowly during observable inflation. For the DBI case, $\cs \PX = 1$ and the change in $ can be related to the change in $\epsilon_H$ and $\cs$ through \eq{eq:rdefn-dbiintro}. As we have taken $\epsilon_H, |\eta_H|,|s|\ll 1$ the tensor-scalar ratio will indeed vary slowly over the observable epoch. % For more general models where $\cs \PX \ne 1$ we have that % \begin{equation}  \frac{\d }{\d \N}\left[ \frac{r}{\cs \PX}\right] = 16\frac{\epsilon_H}{\PX}\left( 2\epsilon_H -2\eta_H\right)\,. \end{equation} % Therefore /\cs\PX$ varies slowly as long as $\PX$ is not too small, \iec close to $\mathcal{O}(\epsilon_H^2)$. This will not be the case in the models studied in Chapters \ref{ch:dbi} and \ref{ch:multibrane}.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -775,6 +775,23 @@ with the tensor-scalar ratio, \iec the amplitude of gravitational waves produced
 during that period. In Chapter~\ref{ch:dbi} we will show how the dynamics of the
 DBI scenario allow an upper limit to be imposed on $r$ using this relation.
 
+In deriving \eq{eq:approxlyth-dbiintro} we have assumed that $r/\cs \PX$ varies slowly during
+observable inflation. For the DBI case, $\cs \PX = 1$ and the change in $r$ can be related to the
+change in $\epsilon_H$ and $\cs$ through \eq{eq:rdefn-dbiintro}. As we have taken $\epsilon_H,
+|\eta_H|,|s|\ll 1$ the tensor-scalar ratio will indeed vary slowly over the observable epoch.
+% 
+For more general models where $\cs \PX \ne 1$ we have that
+% 
+\begin{equation}
+ \frac{\d }{\d \N}\left[ \frac{r}{\cs \PX}\right] = 16\frac{\epsilon_H}{\PX}\left( 2\epsilon_H
+-2\eta_H\right)\,.
+\end{equation}
+% 
+Therefore $r/\cs\PX$ varies slowly as long as $\PX$ is not too small, \iec close to
+$\mathcal{O}(\epsilon_H^2)$. This will not be the case in the models studied in Chapters
+\ref{ch:dbi} and \ref{ch:multibrane}.
+
+
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
