--- a/corrections.tex
+++ b/corrections.tex
@@ -24,3 +24,22 @@ indeed the fact that no scalar field has yet been directly observed.
 
 We will continue to employ the inflationary paradigm in this thesis but it is important to
 acknowledge that some challenges remain to be overcome.
+
+\subsection{Point 4: Validity of Eq 3.28}
+Added to end of Pg 48:
+
+In deriving \eq{eq:approxlyth-dbiintro} we have assumed that $r/\cs \PX$ varies slowly during
+observable inflation. For the DBI case, $\cs \PX = 1$ and the change in $r$ can be related to the
+change in $\epsilon_H$ and $\cs$ through \eq{eq:rdefn-dbiintro}. As we have taken $\epsilon_H,
+|\eta_H|,|s|\ll 1$ the tensor-scalar ratio will indeed vary slowly over the observable epoch.
+% 
+For more general models where $\cs \PX \ne 1$ we have that
+% 
+\begin{equation}
+ \frac{\d }{\d \N}\left[ \frac{r}{\cs \PX}\right] = 16\frac{\epsilon_H}{\PX}\left( 2\epsilon_H
+-2\eta_H\right)\,.
+\end{equation}
+% 
+Therefore $r/\cs\PX$ varies slowly as long as $\PX$ is not too small, \iec close to
+$\mathcal{O}(\epsilon_H^2)$. This will not be the case in the models studied in Chapters
+\ref{ch:dbi} and \ref{ch:multibrane}.
