Point 3, discussion of T-duality. Rephrased discussion on Pgs 40 and 41.

--- a/corrections.tex
+++ b/corrections.tex
@@ -1,7 +1,7 @@
 \section{Mairi's Corrections}
 
 \subsection{Point 2: Drawbacks of Inflation}
-Added to discussion on Pg 36:
+\textbf{Added to discussion on Pg 36:}
 
 In this thesis inflation is taken to be the mechanism by which inhomogeneities in matter are seeded
 and the horizon and flatness problems of the Big Bang are solved. However, the inflationary
@@ -25,8 +25,65 @@ indeed the fact that no scalar field has yet been directly observed.
 We will continue to employ the inflationary paradigm in this thesis but it is important to
 acknowledge that some challenges remain to be overcome.
 
+\subsection{Point 3: T-duality discussion}
+\textbf{Inserted on Pg 40 just below Section 3.2.2 header:}
+
+In string theory an extra space time symmetry is present which relates physical properties in
+theories with large compactification radius with those in theories with small radius. 
+Suppose we have a string theory compactified on a circle of radius $L$. The ``T-duality''
+transformation which relates two physical theories with this one compactified dimension is
+% 
+\begin{equation}
+\label{eq:tdualtransform-dbiintro}
+ L \rightarrow \wt{L} = \frac{\alpha'}{L}\,.
+\end{equation}
+% 
+Now consider what effect this transformation will have on the momentum of a closed string. Instead
+of being a continuum, the momentum takes discrete values \ldots
+\\
+
+\textbf{Rephrased end of Section 3.2.2 on Pg 41 as follows:}
+
+The formula for the mass spectrum, \eq{eq:closedmass-dbiintro}, is invariant
+when $j$ and $w$ are exchanged given the transformation in \eq{eq:tdualtransform-dbiintro}.
+Writing the equations of motion in terms of $\wt{L}$, having interchanged $j$ and
+$w$, gives a new theory which is compactified on a circle of radius $\wt{L}$. This is known as the
+T-dual theory \cite{Sakai1986,Kikkawa1984b}. The two
+theories are physically identical since T-duality is an exact symmetry
+of string theory for closed strings. The T-duality applies to all physics in the theory and in
+particular also affects open string modes. These behave in a different way under T-duality to closed
+strings as will be described below.
+\\
+
+\textbf{Rephrased part of Section 3.2.3 on Pg 41 as follows:}
+
+We introduced T-duality by explaining
+its effects on closed strings. But what happens to the open strings in a T-dualised theory? Open
+strings, as their name suggests, have two open ends and
+consequently cannot have a conserved winding number such as $w$. Suppose once more
+that one
+of the $D$ dimensions is compactified. As $L\rightarrow0$, the non-zero momentum
+states become infinitely massive, but in contrast to the closed case there is now
+no continuum of winding states. Thus, the open string now lives in $D-1$ dimensions
+similar to the result of standard KK compactification \cite{Johnson2000}.
+The endpoints of the open strings 
+then observe Dirichlet boundary conditions, taking fixed values in the compactified
+direction.
+There are still closed strings in this theory, however, and these continue to
+move in the full $D$ dimensions after being T-dualised.  
+
+The result is similar if more than
+one coordinate is made periodic.
+If $D-p-1$ spatial dimensions are compactified, for some $p$, then the ends of
+the open
+strings can still move freely in the other $p$ spatial dimensions on a $p+1$
+dimensional hypersurface. This hypersurface is called a Dirichlet brane or
+D$p$-brane. The closed string modes move in the full $D$ dimensions.
+
+
+
 \subsection{Point 4: Validity of Eq 3.28}
-Added to end of Pg 48:
+\textbf{Added to end of Pg 48:}
 
 In deriving \eq{eq:approxlyth-dbiintro} we have assumed that $r/\cs \PX$ varies slowly during
 observable inflation. For the DBI case, $\cs \PX = 1$ and the change in $r$ can be related to the
