--- a/thesis.tex
+++ b/thesis.tex
@@ -22,14 +22,13 @@ onehalfspacing % onehalfspacing or doublespacing
 \usepackage[%CVSon, % CVS version in footers
             %labels, % show labels
 	    %todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.43 2009/11/26 16:29:09 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
