Point 5: Added reference to Weinberg Cosmology and inserted following text: For single field models no mixing of adiabatic and non-adiabatic modes occurs \cite{Weinberg200804}. Therefore, throughout this thesis we will only consider adiabatic perturbations and ignore any isocurvature mode present.

--- a/corrections.tex
+++ b/corrections.tex
@@ -100,3 +100,10 @@ For more general models where $\cs \PX \ne 1$ we have that
 Therefore $r/\cs\PX$ varies slowly as long as $\PX$ is not too small, \iec close to
 $\mathcal{O}(\epsilon_H^2)$. This will not be the case in the models studied in Chapters
 \ref{ch:dbi} and \ref{ch:multibrane}.
+
+\subsection{Point 5: No isocurvature mode considered}
+\textbf{Added to Perturbation section on Pg 24:}
+
+For single field models no mixing
+of adiabatic and non-adiabatic modes occurs \cite{Weinberg200804}. Therefore, throughout this
+thesis we will only consider adiabatic perturbations and ignore any isocurvature mode present.
