--- a/mainintro.tex
+++ b/mainintro.tex
@@ -565,7 +565,9 @@ above, and an inhomogeneous perturbation $\dvp{}(\eta,x^i)$ for $i=1,2,3$. For t
 following
 analysis to be applicable the perturbation must be much smaller than the background
 field value. From the amplitude of perturbations in the CMB this approximation
-can be seen to be valid \cite{Komatsu:2008hk}. 
+can be seen to be valid \cite{Komatsu:2008hk}. For single field models no mixing
+of adiabatic and non-adiabatic modes occurs \cite{Weinberg200804}. Therefore, throughout this
+thesis we will only consider adiabatic perturbations and ignore any isocurvature mode present. 
 
 If we suppose that $\epsilon$ is a small quantity then the split in $\vp$
 can be written as \cite{Malik:2008im}
