--- a/thesis.bib
+++ b/thesis.bib
@@ -5245,6 +5245,18 @@
   timestamp = {2008.03.12}
 }
 
+@BOOK{Weinberg200804,
+  title = {Cosmology},
+  publisher = {Oxford University Press},
+  year = {2008},
+  author = {Steven Weinberg},
+  pages = {544},
+  month = {4},
+  isbn = {9780198526827},
+  timestamp = {2010.03.12},
+  user = {ith}
+}
+
 @ARTICLE{Weinberg:2008nf,
   author = {Weinberg, Steven},
   title = {{Non-Gaussian Correlations Outside the Horizon}},
