Added two paragraphs outlining assumptions for r<10^{-7} on Pgs 54 and 55.

--- a/corrections.tex
+++ b/corrections.tex
@@ -107,3 +107,27 @@ $\mathcal{O}(\epsilon_H^2)$. This will not be the case in the models studied in 
 For single field models no mixing
 of adiabatic and non-adiabatic modes occurs \cite{Weinberg200804}. Therefore, throughout this
 thesis we will only consider adiabatic perturbations and ignore any isocurvature mode present.
+
+\subsection{Point 6: Assumptions leading to $r<10^{-7}$}
+\textbf{Added to Section 4.2 on Pgs 54 and 55:}
+
+
+Before concluding this section, we should explicitly outline all the assumptions that have lead to
+\eq{eq:standardbound}. First, we are considering the relativistic limit where $\cs\ll1$. We are
+also restricting ourselves to considering the UV scenario where a brane moves towards the tip of
+the throat. This ensures that \eq{eq:importantbound} is satisfied. For the Lyth bound to take the
+form in \eq{eq:approxlyth-dbiintro}, we have assumed that $r$ varies slowly during the observable
+period of inflation. This is justified as the change in $r$ can be written in terms of the
+quasi deSitter parameters $\epsilon_H, \eta_H$ and $s$ and we have assumed their magnitudes are
+much less than unity.
+\\
+\ldots
+\\
+In order to neglect the $\fnleq$ term in \eq{eq:boundpower6} we have assumed that $-\fnleq>5$. As
+$\cs$ has been taken to be small this is expected to be the case. The volume of the Sasaki-Einstein
+manifold $X_5$ is taken to be $\mathcal{O}(\pi^3)$ in keeping with the values for known solutions.
+The WMAP5 normalisation of the scalar perturbation power spectrum has also been used. Finally, in
+going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbound} the most
+``optimistic'' value, $\Delta \N_*\simeq 1$, has been chosen as this leads to the least
+restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
+constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
