--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -321,8 +321,16 @@ $\Delta \N_* \simeq 4$, this constraint is strengthened to
 ${r_*} \lesssim {2 \times 10^{-11}}$.
 
 
-Before concluding this section, we should remark that 
-the estimate (\ref{eq:trapezium}) was derived under the assumption  
+Before concluding this section, we should explicitly outline all the assumptions that have lead to
+\eq{eq:standardbound}. First, we are considering the relativistic limit where $\cs\ll1$. We are
+also restricting ourselves to considering the UV scenario where a brane moves towards the tip of
+the throat. This ensures that \eq{eq:importantbound} is satisfied. For the Lyth bound to take the
+form in \eq{eq:approxlyth-dbiintro}, we have assumed that $r$ varies slowly during the observable
+period of inflation. This is justified as the change in $r$ can be written in terms of the
+quasi deSitter parameters $\epsilon_H, \eta_H$ and $s$ and we have assumed their magnitudes are
+much less than unity.
+
+The estimate (\ref{eq:trapezium}) was derived under the assumption  
 that the integrand in \eq{eq:throatvolume}  
 is constant. This inevitably introduces errors into the bound
 (\ref{eq:generalbound}). However, the two limiting cases of interest 
@@ -355,7 +363,16 @@ We conclude, therefore, that \eq{eq:trapezium}
 provides a sufficiently good estimate of the volume element  
 for a generic warp factor\footnote{As we shall see in the following section, 
 even an order of magnitude error will make little 
-difference to our final conclusions.}.  
+difference to our final conclusions.}.
+
+In order to neglect the $\fnleq$ term in \eq{eq:boundpower6} we have assumed that $-\fnleq>5$. As
+$\cs$ has been taken to be small this is expected to be the case. The volume of the Sasaki-Einstein
+manifold $X_5$ is taken to be $\mathcal{O}(\pi^3)$ in keeping with the values for known solutions.
+The WMAP5 normalisation of the scalar perturbation power spectrum has also been used. Finally, in
+going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbound} the most
+``optimistic'' value, $\Delta \N_*\simeq 1$, has been chosen as this leads to the least
+restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
+constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
 % 
 % 
 % 
