Added discussion of naturalness of multi-coincident brane scenarios in Section 5.1 on Pg 65

--- a/corrections.tex
+++ b/corrections.tex
@@ -131,3 +131,14 @@ going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbo
 ``optimistic'' value, $\Delta \N_*\simeq 1$, has been chosen as this leads to the least
 restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
 constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
+
+\subsection{Point 9: Naturalness of multi-coincident brane inflation}
+\textbf{Added to Section 5.1 on Pg 65:}
+
+One scenario in which multiple branes are expected is after brane flux annihilation, in which
+branes travelling down the throat annihilate with the trapped flux, creating new branes
+\cite{thomasward, DeWolfe:2004qx, Kachru:2002gs}. These are then attracted by other branes and
+fluxes in other throats and propagate toward the bulk.
+In \Rref{thomasward} Thomas \& Ward argue that it is unlikely that only a single brane is left
+after the flux annihilation process, due to the large amount of fine tuning necessary to achieve
+this. Instead it is more likely that a number of branes remain.
