--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -56,6 +56,14 @@ to satisfy the observational constraints.
 One alternative possibility is to consider 
 multiple brane configurations\footnote{In certain limits this approach 
 is actually dual to considering wrapped branes \cite{Ward:2007gs}.}. 
+One scenario in which multiple branes are expected is after brane flux annihilation, in which
+branes travelling down the throat annihilate with the trapped flux, creating new branes
+\cite{thomasward, DeWolfe:2004qx, Kachru:2002gs}. These are then attracted by other branes and
+fluxes in other throats and propagate toward the bulk.
+In \Rref{thomasward} Thomas \& Ward argue that it is unlikely that only a single brane is left
+after the flux annihilation process, due to the large amount of fine tuning necessary to achieve
+this. Instead it is more likely that a number of branes remain.
+
 In the case where  
 $n$ branes are localised initially at equal distances, $l > l_s$, and 
 subsequently follow the same trajectory, 
