Point 7: Added few sentences about Y^p,q spaces.

--- a/corrections.tex
+++ b/corrections.tex
@@ -132,6 +132,18 @@ going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbo
 restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
 constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
 
+\subsection{Point 7: Discussion of $Y^{p,q}$}
+\textbf{Added to Section 4.3 on Pg 57:}
+
+Previously only two five-dimensional Sasaki-Einstein
+metrics were explicity known, $S^5$ and $T^{1,1}$ on $S^2\times S^3$. The $Y^{p,q}$ metrics
+described in \Rref{gauntlett} are a countably infinite number of Sasaki-Einstein metrics on
+$S^2\times S^3$. The metrics are parametrised by the two topological numbers $p$ and $q$, which are
+coprime when the $Y^{p,q}$ is topologically $S^2\times S^3$. The volume of one of these manifolds
+is proportional to $1/p$. Hence by setting $q=1$ and letting $p$ become large, this volume can be
+made arbitrarily small \cite{gauntlett}. On the other hand, the largest volume occurs for $p=2$,
+$q=1$ giving $\mathrm{Vol}(Y^{2,1})\simeq 0.29\pi^3$. 
+
 \subsection{Point 9: Naturalness of multi-coincident brane inflation}
 \textbf{Added to Section 5.1 on Pg 65:}
 
