--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -553,11 +553,18 @@ $\Delta \N_* \simeq 4$.
 This 
 is comparable to the limit on the volume derived for the special case of a 
 quadratic inflaton potential \cite{bmpaper}.  
+
 As noted in Refs.~\cite{bmpaper} and \cite{bean}, condition 
 \eqref{eq:upperboundvol} may be achieved 
-if $X_5$ corresponds to a $Y^{p,q}$ space, 
-which has arbitrarily small volume in the limit  
-$q =1$ and $p \rightarrow \infty$ \cite{gauntlett}. 
+if $X_5$ corresponds to a $Y^{p,q}$ space. Previously only two five-dimensional Sasaki-Einstein
+metrics were explicity known, $S^5$ and $T^{1,1}$ on $S^2\times S^3$. The $Y^{p,q}$ metrics
+described in \Rref{gauntlett} are a countably infinite number of Sasaki-Einstein metrics on
+$S^2\times S^3$. The metrics are parametrised by the two topological numbers $p$ and $q$, which are
+coprime when the $Y^{p,q}$ is topologically $S^2\times S^3$. The volume of one of these manifolds
+is proportional to $1/p$. Hence by setting $q=1$ and letting $p$ become large, this volume can be
+made arbitrarily small \cite{gauntlett}. On the other hand, the largest volume occurs for $p=2$,
+$q=1$ giving $\mathrm{Vol}(Y^{2,1})\simeq 0.29\pi^3$. 
+% 
 Small volumes could also be realised 
 by orbifolding the $S^2$ symmetry of a KS-type throat. 
 
