Point 11: Changed all mentions of hybrid model to toy model.

--- a/corrections.tex
+++ b/corrections.tex
@@ -279,3 +279,30 @@ substituting
 $\Delta \N_* \rightarrow \Neff$. This ratio 
 could be as high as $(60/4)^2 \simeq 200 $, leading to $n$ being less than $15$. In this case
 the assumption of large $n$ would clearly be inconsistent and the model would be ruled out. 
+
+\subsection{Point 11: Changed ``hybrid'' to ``toy model''}
+\textbf{All mentions of the hybrid model have been changed.}
+
+\textbf{Change in list of models on Pg 102:}
+\begin{enumerate}
+\item[4.] $V(\vp) = \msqphisqwithV$. This is a contrived toy model which requires inflation to
+be terminated by hand. We will set inflation to end when $\vp \simeq 8$. By taking a value
+of $U_0 = 5\e{-10}\Mpl^{4}$ a blue spectrum ($n_s>1$) can then be obtained
+\cite{Linde:1993cn,Komatsu:2008hk}.
+\end{enumerate}
+
+\textbf{Change in description on Pg 129:}
+The fourth model, with potential $V(\vp)=\msqphisqwithV$, is a contrived toy model.
+As described in Section~\ref{sec:pots-num}, in order to perform the single field
+calculation, the end time of inflation must be specified by hand. 
+
+\textbf{Change in caption of Fig 8.12 on Pg 131:}
+Comparison of the
+source term
+evolution for the four different models. After horizon crossing the magnitude of the
+source term is larger for the quadratic and quartic models than for the other two.
+Towards the end of the numerical calculation there is a marked increase in $|S|$ for
+three of the models as $\bar{\varepsilon}_H$ increases towards unity. The end time of
+inflation is specified by hand for the contrived toy model, so this effect is
+not seen.
+
