--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -446,7 +446,7 @@ evolution for the four different models. After horizon crossing the magnitude of
 source term is larger for the quadratic and quartic models than for the other two.
 Towards the end of the numerical calculation there is a marked increase in $|S|$ for
 three of the models as $\bar{\varepsilon}_H$ increases towards unity. The end time of
-inflation is specified by hand for the hybrid inflation model, so this effect is
+inflation is specified by hand for the contrived toy model, so this effect is
 not seen.}
 \label{fig:cmp-src-kwmap}
 \end{figure}
@@ -484,9 +484,7 @@ models become apparent.}
 \end{figure}
 % 
 
-The fourth model, with potential $V(\vp)=\msqphisqwithV$, is nominally a hybrid
-inflation model
-requiring two fields.
+The fourth model, with potential $V(\vp)=\msqphisqwithV$, is a contrived toy model.
 As described in Section~\ref{sec:pots-num}, in order to perform the single field
 calculation, the end time of inflation must be specified by hand. In this simulation
 $\vp\simeq 8$
