--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -439,11 +439,9 @@ is the effective potential resulting from the monodromy inflation model of D$4$
 branes, where observable tensor modes are possible \cite{Silverstein:2008sg,
 Alabidi:2008ej}.
 % 
- \item $V(\vp) = \msqphisqwithV$. This hybrid inflation model requires inflation to
-be terminated by the decay of another field. However, this will not be
-implemented in the code. Instead,
-inflation will be set by hand to end when $\vp \simeq 8$. By taking a value of
-$U_0 = 5\e{-10}\Mpl^{4}$ a blue spectrum ($n_s>1$) can then be obtained
+ \item $V(\vp) = \msqphisqwithV$. This is a contrived toy model which requires inflation to
+be terminated by hand. We will set inflation to end when $\vp \simeq 8$. By taking a value
+of $U_0 = 5\e{-10}\Mpl^{4}$ a blue spectrum ($n_s>1$) can then be obtained
 \cite{Linde:1993cn,Komatsu:2008hk}.
 % 
 \end{enumerate}
